# optirustic

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: check-and-lint.yaml  python.yaml  release-crate.yaml  rust.yaml  tests.yaml
examples/: convergence.rs  convergence_plot.py  nsga2_sch.rs  nsga2_sch_plot.py  nsga2_zdt1.rs  nsga3_drlz1_8obj_plot.py  nsga3_drlz1_plot.py  nsga3_dtlz1.rs  nsga3_dtlz1_8obj.rs  nsga3_dtlz1_plot.py  nsga3_dtlz2.rs  nsga3_inverted_dtlz1.rs  nsga3_inverted_dtlz1_plot.py  reference_points_1layer.rs  reference_points_1layer_plot.py  reference_points_2layers.rs  reference_points_2layers_plot.py
examples/results/: DTLZ1_3obj_Adaptive_NSGA3_gen400.json  DTLZ1_3obj_NSGA3_gen400.json  DTLZ1_8obj_NSGA3_gen750.json  DTLZ2_3obj_NSGA3_gen400.json  SCH_2obj_NSGA2_gen250.json  ZDT1_2obj_NSGA2_gen1000.json  ref_points_2layers_3obj_5gaps.json  ref_points_3obj_5gaps.json
examples/results/convergence/: Final_NSGA2_gen1000.json  History_NSGA2_gen100.json  History_NSGA2_gen200.json  History_NSGA2_gen300.json  History_NSGA2_gen400.json  History_NSGA2_gen500.json  History_NSGA2_gen600.json  History_NSGA2_gen700.json  History_NSGA2_gen800.json  History_NSGA2_gen900.json  Init_NSGA2_gen1.json
hv-fonseca-et-al-2006-sys/: .gitignore  Cargo.toml  README.md  build.rs
hv-fonseca-et-al-2006-sys/src/: bindings.rs  lib.rs
hv-wfg-sys/: Cargo.toml  README.md  build.rs
hv-wfg-sys/src/: bindings.rs  lib.rs
libs/hv-fonseca-et-al-2006-sys/src/: lib.rs
libs/hv-wfg-sys/: Cargo.toml  LICENSE.txt
libs/hv-wfg-sys/src/: lib.rs
libs/optirustic-macros/: Cargo.toml
libs/optirustic-macros/src/: lib.rs
optirustic/: Cargo.toml
optirustic-core/: Cargo.toml
optirustic-core/src/algorithms/: nsga2.rs  stopping_condition.rs
optirustic-core/src/core/: individual.rs  mod.rs  variable.rs
optirustic-core/src/metrics/: mod.rs
optirustic-core/src/operators/: crossover.rs
optirustic-macros/: Cargo.toml
optirustic-macros/src/: lib.rs
optirustic-py/: Cargo.toml  README.md  optirustic.pyi  pyproject.toml
optirustic-py/src/: constraint.rs  individual.rs  lib.rs  objective.rs  problem.rs  reference_points.rs  variable.rs
optirustic-py/tests/: test_api.py
optirustic-py/utils/: plot.py
optirustic/examples/: nsga2.rs  nsga2_sch.rs  nsga2_zdt1.rs  nsga3.rs  nsga3_dtlz1.rs  nsga3_dtlz2.rs  reference_point.rs  reference_points_1layer.rs  reference_points_2layers.rs
optirustic/examples/results/: DTLZ2_3obj_NSGA3_gen400.json  SCH_2obj_NSGA2_gen250.json  ZDT1_2obj_NSGA2_gen1000.json
optirustic/src/: katex-header.html  lib.rs
optirustic/src/algorithms/: algorithm.rs  mod.rs  nsga2.rs  nsga3.rs  stopping_condition.rs  utils.rs
optirustic/src/algorithms/nsga3/: associate.rs  mod.rs  niching.rs  normalise.rs
optirustic/src/algorithms/nsga3/test_data/: Associate_individuals.csv  Associate_ref_points.csv  Normalise_normalised_objectives.csv  Normalise_objectives.csv
optirustic/src/core/: constraint.rs  error.rs  individual.rs  mod.rs  objective.rs  problem.rs  test_utils.rs  utils.rs  variable.rs
optirustic/src/core/test_data/: DTLZ1_variables.csv
optirustic/src/metrics/: distance.rs  hypervolume.rs  hypervolume_2d.rs  hypervolume_fonseca_2006.rs  hypervolume_while_2012.rs  mod.rs
optirustic/src/operators/: comparison.rs  crossover.rs  mod.rs  mutation.rs
optirustic/src/utils/: algebra.rs  fast_non_dominated_sort.rs  lin_sys_solve.rs  mod.rs  reference_points.rs  vectors.rs
src/: SS_constraint.rs  lib.rs
src/algorithms/: a_nsga3.rs  algorithm.rs  mod.rs  nsga2.rs  stopping_condition.rs  utils.rs
src/algorithms/nsga3/: adaptive_ref_points.rs  associate.rs  mod.rs  niching.rs
src/core/: constraint.rs  data.rs  error.rs  individual.rs  mod.rs  objective.rs  problem.rs  utils.rs  variable.rs
src/core/test_data/: DTLZ1_objectives.csv
src/metrics/: distance.rs  hypervolume.rs  hypervolume_2d.rs  hypervolume_fonseca_2006.rs  mod.rs
src/metrics/hv_wfg/: mod.rs  wfg.rs
src/operators/: comparison.rs  crossover.rs  mod.rs  mutation.rs  selector.rs
src/utils/: fast_non_dominated_sort.rs  mod.rs  reference_points.rs
