[package]
name = "optirustic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
serde_json = "1.0"
serde = { version = "1.0.200", features = ["derive"] }
rand = "0.8.5"
csv = "1.3.0"
thiserror = "1.0.60" # TODO remove me

[dev-dependencies]
float-cmp = "0.9.0"
