[package]
name = "optirustic"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
serde_json = "1.0"
serde = { version = "1.0.200", features = ["derive"] }
rand = "0.8.5"
thiserror = "1.0.60"
csv = "1.3.0" # TODO remove me
rayon = "1.10.0"
env_logger = "0.11.3"

[dev-dependencies]
float-cmp = "0.9.0"
