[package]
name = "hv-fonseca-et-al-2006-sys"
description = "A wrapper for the hyper-volume algorithm by Fonseca et al. (2006) "
homepage = "https://lopez-ibanez.eu/hypervolume"
authors = ["Stefano Simoncelli <16114781+s-simoncelli@users.noreply.github.com>"]
repository = "https://github.com/s-simoncelli/optirustic"
version = "2.0.0-rc.2"
edition = "2021"
license = "LGPL-2.1"

[build-dependencies]
bindgen = "0.69.4"
cc = { version = "1.0", features = ["parallel"] }