[package]
name = "hv-wfg-sys"
description = "A wrapper for the hyper-volume algorithm by While et al. (2012) "
homepage = "https://github.com/lbradstreet/WFG-hypervolume/tree/master"
authors = ["Stefano Simoncelli <netcelli@gmail.com>"]
repository = "https://github.com/s-simoncelli/optirustic"
version = "0.1.0"
edition = "2021"
license = "GPL-3"

[build-dependencies]
bindgen = "0.69.4"
cc = { version = "1.0", features = ["parallel"] }