[package]
name = "optirustic"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
serde_json = "1.0"
serde = { version = "1.0.200", features = ["derive"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
thiserror = "1.0.60"
rayon = "1.10.0"
env_logger = "0.11.3"
chrono = { version = "0.4.38", features = ["serde"] }
ordered-float = "4.2.0"
hv-fonseca-et-al-2006-sys = { path = "../hv-fonseca-et-al-2006-sys" }
hv-wfg-sys = { path = "../hv-wfg-sys" }
plotters = { version = "0.3.6", optional = true }

[dev-dependencies]
float-cmp = "0.9.0"

[features]
default = ["plot"]
plot = ["dep:plotters"]