[package]
name = "optirustic-macros"
version = "1.1.0"
edition = "2021"
repository = "https://github.com/s-simoncelli/optirustic"
authors = ["Stefano Simoncelli <16114781+s-simoncelli@users.noreply.github.com>"]
description = "A set of macros for the optirustic crate"
homepage = "https://github.com/s-simoncelli/optirustic"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.72", features = ["full"] }
quote = "1.0.36"
proc-macro2 = "1.0.86"